Fixed spacing in about

--- a/src/styles.css
+++ b/src/styles.css
@@ -595,6 +595,10 @@ img {
   margin-right: auto;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .mr-4 {
   margin-right: 1rem;
 }
@@ -900,6 +904,10 @@ img {
 
 @media (min-width: 870px) {
 
+  .sm\:block {
+    display: block;
+  }
+
   .sm\:flex {
     display: flex;
   }
@@ -910,6 +918,10 @@ img {
 
   .sm\:flex-row {
     flex-direction: row;
+  }
+
+  .sm\:m-0 {
+    margin: 0;
   }
 
   .sm\:mb-4 {
